[package]
name = "rusty_raisr"
version = "0.1.0"
authors = ["Srinivas Kaza <srinivas@kaza.io>"]

[dependencies]
nalgebra = "0.16.10"
image = "0.19.0"
rayon = "1.0.2"
itertools = "*"
num = "*"
flate2 = "1.0"
clap = "*"
ndarray = { version = "0.11.0", features = ["blas-src"] }
blas-src = { version = "0.2.0", default-features = false, features = ["openblas"] }
openblas-src = { version = "0.6.0", default-features = false, features = ["cblas", "system"] }
byteorder = "1.2.4"
glium = { git="https://github.com/bobtwinkles/glium.git", branch="image_unit_support" }
#palette = "*"